--- a/package.xml
+++ b/package.xml
@@ -25,6 +25,7 @@
   <build_depend>angles</build_depend>
   <build_depend>nodelet</build_depend>
   <build_depend>message_generation</build_depend>
+  <build_depend>libpcl-all-dev</build_depend>
 
   <!--<build_export_depend>message_generation</build_export_depend>-->
 
@@ -39,6 +40,7 @@
   <run_depend>pluginlib</run_depend>
   <run_depend>angles</run_depend>
   <run_depend>nodelet</run_depend>
+  <run_depend>libpcl-all</run_depend>
 
   <export>
     <cpp cflags="-I${prefix}/include `rosboost-cfg --cflags`" lflags=""/>
