--- a/examples/PlatformFilter.yaml
+++ b/examples/PlatformFilter.yaml
@@ -1,3 +1,7 @@
 scan_filter_chain:
 - name: Platform
   type: laser_filters/PlatformFilter
+  params:
+    tolerance: 0.2   
+    max_distance: 10.0  
+    number_skipped_angle: 1
