angle value parametrized

--- a/cfg/PlatformFilter.cfg
+++ b/cfg/PlatformFilter.cfg
@@ -14,4 +14,6 @@ gen.add("number_skipped_angle", int_t, 0, "Number of angle can be skipped",    1
 
 gen.add("threshold_coefficient", double_t, 0, "Threshold rate for line fitting",    1.0, 0.1,   5.0)
 
+gen.add("angle_threshold", double_t, 0, "angle threshold for platforms' edge",    10.0, 0.1,   40.0)
+
 exit(gen.generate(PACKAGE, "laser_filters", "PlatformFilter"))
